Add mutationSummary schema
